# router/app.go
@@ -16,7 +16,12 @@ func Router() *gin.Engine {
 
 	// 路由规则
 	r.GET("/ping", service.Ping)
+
+	// 问题
 	r.GET("/problem-list", service.GetProblemList)
 	r.GET("/problem-detail",service.GetProblemDetail)
+
+	// 用户
+	r.GET("user-detail",service.GetUserDetail)
 	return r
 }
